--- a/workspace/app.yaml
+++ b/workspace/app.yaml
@@ -10,6 +10,14 @@ threadsafe: yes
 
 # Handlers define how to route requests to your application.
 handlers:
+- url: /
+  static_files: index.html
+  upload: index\.html
+  
+- url: /image
+  static_dir: image
+  
+  
 
 # This handler tells app engine how to route requests to a WSGI application.
 # The script value is in the format <path.to.module>.<wsgi_application>
@@ -20,3 +28,5 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+  
+
