--- a/workspace/app.yaml
+++ b/workspace/app.yaml
@@ -17,7 +17,8 @@ handlers:
 - url: /image
   static_dir: image
   
-  
+- url: /music
+  static_dir: music
 
 # This handler tells app engine how to route requests to a WSGI application.
 # The script value is in the format <path.to.module>.<wsgi_application>
